# SAGA-MEM0

./: .env.example  .gitignore  CLAUDE.md  README.md  SAGA_MEM0.md  pyproject.toml
app/: main.py
app/api/v1/: characters.py  chat.py  memory.py  router.py
app/charx/: lorebook.py  parser.py  schemas.py
app/core/: config.py  logging.py  metrics.py  middleware.py  tracing.py
app/memory/: base.py  factory.py  mem0_backend.py
app/providers/: anthropic.py  base.py  google.py  openai.py
app/schemas/: chat.py  memory.py
app/services/: context_builder.py  curator.py  database.py  llm.py  message_compressor.py  post_turn.py  system_stabilizer.py  window_recovery.py
